[package]
name = "breaking-block-game"
version = "0.1.0"
authors = ["kmkzt <info.pscreator@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.100.0"
piston2d-opengl_graphics = "0.66.0"
piston2d-graphics = "0.33.0"
pistoncore-sdl2_window = "0.63.0"
pistoncore-input = "0.28.0"
rand = "0.7.0"
